<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <!-- Header -->
    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/headerFragmentContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:name="vn.edu.fpt.shopapp.fragment.HeaderFragment" />

    <!-- Chọn loại thống kê: Theo ngày hay theo tháng -->
    <RadioGroup
        android:id="@+id/radioGroupFilter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="12dp">

        <RadioButton
            android:id="@+id/dayRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/label_ngay" />

        <RadioButton
            android:id="@+id/monthRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/label_thang" />
    </RadioGroup>

    <!-- Nút chọn ngày / tháng -->
    <Button
        android:id="@+id/pickDateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/label_chon_ngay" />

    <!-- Text hiển thị tổng doanh thu -->
    <TextView
        android:id="@+id/totalRevenueTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/label_doanh_thu"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/orderCountTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/label_don_hang"
        android:textSize="16sp" />

    <!-- Danh sách các đơn hàng -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/ordersRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

</LinearLayout>
