<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/loginGridLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="1"
    tools:context=".MainActivity"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/background">


    <TextView
        android:id="@+id/welcomeTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="0"
        android:gravity="center"
        android:text="@string/label_welcome"
        android:textSize="@dimen/TitleSize"
        android:layout_marginTop="@dimen/activity_margin_top"
        android:layout_marginBottom="@dimen/activity_margin_top"
        android:paddingTop="@dimen/textview_padding"
        android:textColor="@color/white"/>

    <TextView
        android:id="@+id/loginTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="0"
        android:layout_marginBottom="@dimen/activity_margin_top"
        android:gravity="center_horizontal"
        android:text="@string/label_register_now"
        android:textColor="@color/white"/>

    <LinearLayout
        android:id="@+id/nameLinearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="0"
        android:layout_gravity="fill_horizontal"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/activity_vertical_margin">

        <LinearLayout
            android:id="@+id/labelNameLinearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/nameLabelTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/textview_padding"
                android:text="@string/label_name"
                android:textColor="@color/white"/>

            <TextView
                android:id="@+id/star3TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=" *"
                android:textColor="@color/design_default_color_error" />

        </LinearLayout>

        <EditText
            android:id="@+id/nameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_name"
            android:imeOptions="actionNext"
            android:inputType="textPersonName"
            android:paddingLeft="@dimen/textview_padding"
            android:maxLength="50"
            android:textColorHint="@color/material_dynamic_neutral70"
            android:textColor="@color/white"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/phoneLinearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="3"
        android:layout_column="0"
        android:layout_gravity="fill_horizontal"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/activity_margin_top">

        <LinearLayout
            android:id="@+id/labelLinearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/phoneLabelTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_phone_number"
                android:paddingLeft="@dimen/textview_padding"
                android:textColor="@color/white"/>

            <TextView
                android:id="@+id/star1TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=" *"
                android:textColor="@color/design_default_color_error" />

        </LinearLayout>

        <EditText
            android:id="@+id/phoneEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_phone"
            android:imeOptions="actionNext"
            android:inputType="number"
            android:paddingLeft="@dimen/textview_padding"
            android:textColorHint="@color/material_dynamic_neutral70"
            android:textColor="@color/white"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/passwordLinearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="4"
        android:layout_column="0"
        android:layout_gravity="fill_horizontal"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/activity_margin_top">

        <LinearLayout
            android:id="@+id/label2LinearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/passwordLabelTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_password"
                android:paddingLeft="@dimen/textview_padding"
                android:textColor="@color/white"/>

            <TextView
                android:id="@+id/star2TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=" *"
                android:textColor="@color/design_default_color_error" />

        </LinearLayout>

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:paddingLeft="@dimen/textview_padding"
            android:textColorHint="@color/material_dynamic_neutral70"
            android:textColor="@color/white"/>
    </LinearLayout>

    <Button
        android:id="@+id/registerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="5"
        android:layout_column="0"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/activity_margin_top"
        android:text="@string/button_register"
        android:backgroundTint="@android:color/holo_green_dark"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="6"
        android:layout_column="0"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/activity_margin_top"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/registerTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_co_tai_khoan"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/loginLinkTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/textview_margin"
            android:clickable="true"
            android:text="@string/link_login"
            android:textColor="@color/white"/>
    </LinearLayout>

</GridLayout>