<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_margin="8dp"
    android:layout_height="wrap_content"
    android:elevation="10dp"
    android:padding="8dp">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/textview_padding">

        <ImageView
            android:id="@+id/foodImageView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:scaleType="centerCrop"
            android:contentDescription="Food image" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingStart="12dp">

            <TextView
                android:id="@+id/foodNameTextView"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="#000"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/foodPriceTextView"
                android:textColor="#555"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/foodStatusTextView"
                android:textStyle="italic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >

                <Button
                    android:id="@+id/addToCartButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/button_chon"
                    android:layout_marginRight="@dimen/textview_margin"
                    android:visibility="gone">
                </Button>

                <Button
                    android:id="@+id/orderButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/button_order"
                    android:layout_marginLeft="@dimen/textview_margin"
                    android:visibility="gone">
                </Button>

                <Button
                    android:id="@+id/editButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/textview_margin"
                    android:text="@string/button_sua"
                    android:visibility="gone">
                </Button>

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>
